--- a/CSS/11-Positions/01-Fixed.html
+++ b/CSS/11-Positions/01-Fixed.html
@@ -38,7 +38,13 @@
             <div id="main" class="left">
                 <div class="section">
                     <h2>This is section_1</h2>
-                    <img src="../../images/images/l34882-ironman-rigged-original-model--98611.jpg" alt="">
+                    <div class="images">
+                        <img src="../../images/images/l34882-ironman-rigged-original-model--98611.jpg" alt="">
+                        <div class="img">
+                            <img src="https://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f9.png" alt="">
+                        </div>
+                    </div>
+
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo magnam, voluptate tempore vel nihil veniam velit quas error possimus adipisci cumque! Itaque molestias neque quasi deleniti? Animi quibusdam consectetur perspiciatis.
                     </p>
@@ -48,7 +54,12 @@
                 </div>
                 <div class="section">
                     <h2>This is section_2</h2>
-                    <img src="../../images/images/l34882-ironman-rigged-original-model--98611.jpg" alt="">
+                    <div class="images">
+                        <img src="../../images/images/l34882-ironman-rigged-original-model--98611.jpg" alt="">
+                        <div class="img">
+                            <img src="https://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f9.png" alt="">
+                        </div>
+                    </div>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo magnam, voluptate tempore vel nihil veniam velit quas error possimus adipisci cumque! Itaque molestias neque quasi deleniti? Animi quibusdam consectetur perspiciatis.
                     </p>
@@ -58,7 +69,12 @@
                 </div>
                 <div class="section">
                     <h2>This is section_3</h2>
-                    <img src="../../images/images/l34882-ironman-rigged-original-model--98611.jpg" alt="">
+                    <div class="images">
+                        <img src="../../images/images/l34882-ironman-rigged-original-model--98611.jpg" alt="">
+                        <div class="img">
+                            <img src="https://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f9.png" alt="">
+                        </div>
+                    </div>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo magnam, voluptate tempore vel nihil veniam velit quas error possimus adipisci cumque! Itaque molestias neque quasi deleniti? Animi quibusdam consectetur perspiciatis.
                     </p>
@@ -97,6 +113,15 @@
                 <img src="../../img_2.gif" alt="">
             </div>
         </div>
+    </div>
+
+    <div id="footer">
+        <h2>This is footer</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptas dolor ratione pariatur exercitationem voluptatum facilis magnam excepturi officiis quae? Magni consectetur explicabo hic quidem ratione non, quisquam repellendus! Repellat. Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Consequatur, aliquam! Recusandae ut blanditiis aperiam cum beatae, aliquid eos similique tempore dicta. Magni optio recusandae nihil. Sint est laboriosam vero atque. Lorem ipsum, dolor sit
+            amet consectetur adipisicing elit. A sapiente numquam ut ea accusantium aperiam corporis voluptates modi consectetur, architecto excepturi sit quibusdam illo in consequuntur explicabo debitis ipsam. Consectetur!
+        </p>
     </div>
 
 
