--- a/CSS_3/07-Animations/01-Keyframes.html
+++ b/CSS_3/07-Animations/01-Keyframes.html
@@ -14,9 +14,10 @@
         img {
             animation-name: anim_1;
             animation-duration: 5s;
-            animation-delay: 2s;
-            animation-direction: alternate;
-            animation-iteration-count: infinite;
+            animation-fill-mode: forwards;
+            /* animation-delay: 2s; */
+            /* animation-direction: alternate; */
+            /* animation-iteration-count: infinite; */
         }
         
         @keyframes anim_1 {
