--- a/bmw/index.html
+++ b/bmw/index.html
@@ -20,9 +20,9 @@
         <header id="header">
             <div class="container">
                 <div class="row justify-content-between">
-                    <div class="col-md-8">
+                    <div class="col-md-10 col-9">
                         <div class="row">
-                            <div class="col-md-9">
+                            <div class="col-md-10">
                                 <nav id="main-navigation">
                                     <ul>
                                         <li><a href="#">Home</a></li>
@@ -41,14 +41,14 @@
                                             <i class="fas fa-search"></i>
                                         </a>
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                         <a href="#">BMW in your country</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-3">
                         <div class="logo">
                             <a href="#">
                                 <img class="w-100" src="https://www.bmw.com/etc.clientlibs/settings/wcm/designs/bmwcom/base/resources/img/logo-en.png" alt="logo">
@@ -61,7 +61,77 @@
 
         <div id="banner">
             <img class="w-100" src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/vantablack/vb-00-teaser-hd1.jpg.asset.1567082277612.jpg" alt="banner">
+            <div class="desc">
+                <h3>The Vantablack Car</h3>
+                <h1>Black beast: Vantablack light-absorbing paint meets BMW</h1>
+                <a class="btn-1" href="#">Read More</a>
+            </div>
         </div>
+
+        <section id="section_1">
+            <div class="container">
+                <h2 class="text-center">DISCOVER BMW.COM STORIES</h2>
+                <div id="carousel">
+                    <div class="slider row">
+                        <div class="slide">
+                            <a href="#">
+                                <div class="image">
+                                    <img src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/grand-tour/AMP/gt-teaser.jpg.asset.1565784001401.jpg?imwidth=150" alt="">
+                                </div>
+                                <div class="desc">
+                                    <b>Some text</b>
+                                    <h5>HOW VIENNA TASTES</h5>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slide">
+                            <a href="#">
+                                <div class="image">
+                                    <img src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/need-for-speed/AMP/nfs-07-media-portrait-amp.jpg.asset.1554807507877.jpg?imwidth=150" alt="">
+                                </div>
+                                <div class="desc">
+                                    <b>Some text</b>
+                                    <h5>HOW VIENNA TASTES</h5>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slide">
+                            <a href="#">
+                                <div class="image">
+                                    <img src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/grand-tour/AMP/gt-teaser.jpg.asset.1565784001401.jpg?imwidth=150" alt="">
+                                </div>
+                                <div class="desc">
+                                    <b>Some text</b>
+                                    <h5>HOW VIENNA TASTES</h5>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slide">
+                            <a href="#">
+                                <div class="image">
+                                    <img src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/need-for-speed/AMP/nfs-07-media-portrait-amp.jpg.asset.1554807507877.jpg?imwidth=150" alt="">
+                                </div>
+                                <div class="desc">
+                                    <b>Some text</b>
+                                    <h5>HOW VIENNA TASTES</h5>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="slide">
+                            <a href="#">
+                                <div class="image">
+                                    <img src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/grand-tour/AMP/gt-teaser.jpg.asset.1565784001401.jpg?imwidth=150" alt="">
+                                </div>
+                                <div class="desc">
+                                    <b>Some text</b>
+                                    <h5>HOW VIENNA TASTES</h5>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </div>
 
