--- a/Javascript/MusicApp/index.html
+++ b/Javascript/MusicApp/index.html
@@ -99,6 +99,9 @@
                 <div class="col-md-4">
                     <aside id="sidebar">
                         <h2 class="text-center">My Playlist</h2>
+                        <ul id="playList">
+
+                        </ul>
                     </aside>
                 </div>
             </div>
@@ -112,6 +115,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script src="assets/javascripts/songs.js"></script>
+    <script src="assets/javascripts/model.js"></script>
     <script src="assets/javascripts/main.js"></script>
 </body>
 
